--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +28,400 @@
     "\n",
     "# First 2000 results, returned as JSON from API / converted to Python list of\n",
     "# dictionaries by sodapy.\n",
-    "results = client.get(\"wujg-7c2s\", limit=2000)\n",
+    "results = client.get(\"wujg-7c2s\", limit=2000) # increase limit if you want more data\n",
     "\n",
     "# Convert to pandas DataFrame\n",
-    "results_df = pd.DataFrame.from_records(results)"
+    "results_df = pd.DataFrame.from_records(results)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>transit_timestamp</th>\n",
+       "      <th>transit_mode</th>\n",
+       "      <th>station_complex_id</th>\n",
+       "      <th>station_complex</th>\n",
+       "      <th>borough</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>fare_class_category</th>\n",
+       "      <th>ridership</th>\n",
+       "      <th>transfers</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>georeference</th>\n",
+       "      <th>:@computed_region_kjdx_g34t</th>\n",
+       "      <th>:@computed_region_yamh_8v7k</th>\n",
+       "      <th>:@computed_region_wbg7_3whc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-03-15T17:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>127</td>\n",
+       "      <td>DeKalb Av (L)</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Seniors &amp; Disability</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.70381</td>\n",
+       "      <td>-73.91843</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.91843, 4...</td>\n",
+       "      <td>2090</td>\n",
+       "      <td>894</td>\n",
+       "      <td>820</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-03-15T13:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>605</td>\n",
+       "      <td>168 St (A,C,1)</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Students</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.840717</td>\n",
+       "      <td>-73.93956</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.93956, 4...</td>\n",
+       "      <td>2095</td>\n",
+       "      <td>749</td>\n",
+       "      <td>791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-03-15T13:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>158</td>\n",
+       "      <td>86 St (C,B)</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Unlimited 7-Day</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.78587</td>\n",
+       "      <td>-73.96892</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.96892, 4...</td>\n",
+       "      <td>2095</td>\n",
+       "      <td>749</td>\n",
+       "      <td>751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-03-15T11:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>621</td>\n",
+       "      <td>Broadway Junction (A,C,J,L,Z)</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>omny</td>\n",
+       "      <td>OMNY - Full Fare</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>40.678333</td>\n",
+       "      <td>-73.90532</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.90532, 4...</td>\n",
+       "      <td>2090</td>\n",
+       "      <td>894</td>\n",
+       "      <td>816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-03-15T21:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>212</td>\n",
+       "      <td>Kingsbridge Rd (B,D)</td>\n",
+       "      <td>Bronx</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Full Fare</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.866978</td>\n",
+       "      <td>-73.89351</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.89351, 4...</td>\n",
+       "      <td>2032</td>\n",
+       "      <td>307</td>\n",
+       "      <td>654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1995</th>\n",
+       "      <td>2023-03-15T06:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>608</td>\n",
+       "      <td>4 Av (F,G)/9 St (R)</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Full Fare</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>40.67085</td>\n",
+       "      <td>-73.988304</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.988304, ...</td>\n",
+       "      <td>2090</td>\n",
+       "      <td>894</td>\n",
+       "      <td>893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1996</th>\n",
+       "      <td>2023-03-15T14:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>221</td>\n",
+       "      <td>21 St-Queensbridge (F)</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Fair Fare</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>40.754204</td>\n",
+       "      <td>-73.94283</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.94283, 4...</td>\n",
+       "      <td>2137</td>\n",
+       "      <td>196</td>\n",
+       "      <td>873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1997</th>\n",
+       "      <td>2023-03-15T17:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>624</td>\n",
+       "      <td>Chambers St (A,C)/WTC (E)/Park Pl (2,3)/Cortla...</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>omny</td>\n",
+       "      <td>OMNY - Full Fare</td>\n",
+       "      <td>3980.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40.71411</td>\n",
+       "      <td>-74.00858</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-74.00858, 4...</td>\n",
+       "      <td>2095</td>\n",
+       "      <td>749</td>\n",
+       "      <td>723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998</th>\n",
+       "      <td>2023-03-15T12:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>85</td>\n",
+       "      <td>75 St-Elderts Ln (J,Z)</td>\n",
+       "      <td>Queens</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Other</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.691322</td>\n",
+       "      <td>-73.86714</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.86714, 4...</td>\n",
+       "      <td>2137</td>\n",
+       "      <td>196</td>\n",
+       "      <td>1168</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1999</th>\n",
+       "      <td>2023-03-15T04:00:00.000</td>\n",
+       "      <td>subway</td>\n",
+       "      <td>124</td>\n",
+       "      <td>Montrose Av (L)</td>\n",
+       "      <td>Brooklyn</td>\n",
+       "      <td>metrocard</td>\n",
+       "      <td>Metrocard - Unlimited 30-Day</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>40.70774</td>\n",
+       "      <td>-73.93985</td>\n",
+       "      <td>{'type': 'Point', 'coordinates': [-73.93985, 4...</td>\n",
+       "      <td>2090</td>\n",
+       "      <td>894</td>\n",
+       "      <td>884</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2000 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            transit_timestamp transit_mode station_complex_id  \\\n",
+       "0     2023-03-15T17:00:00.000       subway                127   \n",
+       "1     2023-03-15T13:00:00.000       subway                605   \n",
+       "2     2023-03-15T13:00:00.000       subway                158   \n",
+       "3     2023-03-15T11:00:00.000       subway                621   \n",
+       "4     2023-03-15T21:00:00.000       subway                212   \n",
+       "...                       ...          ...                ...   \n",
+       "1995  2023-03-15T06:00:00.000       subway                608   \n",
+       "1996  2023-03-15T14:00:00.000       subway                221   \n",
+       "1997  2023-03-15T17:00:00.000       subway                624   \n",
+       "1998  2023-03-15T12:00:00.000       subway                 85   \n",
+       "1999  2023-03-15T04:00:00.000       subway                124   \n",
+       "\n",
+       "                                        station_complex    borough  \\\n",
+       "0                                         DeKalb Av (L)   Brooklyn   \n",
+       "1                                        168 St (A,C,1)  Manhattan   \n",
+       "2                                           86 St (C,B)  Manhattan   \n",
+       "3                         Broadway Junction (A,C,J,L,Z)   Brooklyn   \n",
+       "4                                  Kingsbridge Rd (B,D)      Bronx   \n",
+       "...                                                 ...        ...   \n",
+       "1995                                4 Av (F,G)/9 St (R)   Brooklyn   \n",
+       "1996                             21 St-Queensbridge (F)     Queens   \n",
+       "1997  Chambers St (A,C)/WTC (E)/Park Pl (2,3)/Cortla...  Manhattan   \n",
+       "1998                             75 St-Elderts Ln (J,Z)     Queens   \n",
+       "1999                                    Montrose Av (L)   Brooklyn   \n",
+       "\n",
+       "     payment_method               fare_class_category ridership transfers  \\\n",
+       "0         metrocard  Metrocard - Seniors & Disability      11.0       0.0   \n",
+       "1         metrocard              Metrocard - Students      11.0       0.0   \n",
+       "2         metrocard       Metrocard - Unlimited 7-Day      31.0       0.0   \n",
+       "3              omny                  OMNY - Full Fare      65.0      11.0   \n",
+       "4         metrocard             Metrocard - Full Fare       8.0       0.0   \n",
+       "...             ...                               ...       ...       ...   \n",
+       "1995      metrocard             Metrocard - Full Fare      53.0       7.0   \n",
+       "1996      metrocard             Metrocard - Fair Fare      24.0       3.0   \n",
+       "1997           omny                  OMNY - Full Fare    3980.0      10.0   \n",
+       "1998      metrocard                 Metrocard - Other       1.0       0.0   \n",
+       "1999      metrocard      Metrocard - Unlimited 30-Day       2.0       0.0   \n",
+       "\n",
+       "       latitude   longitude  \\\n",
+       "0      40.70381   -73.91843   \n",
+       "1     40.840717   -73.93956   \n",
+       "2      40.78587   -73.96892   \n",
+       "3     40.678333   -73.90532   \n",
+       "4     40.866978   -73.89351   \n",
+       "...         ...         ...   \n",
+       "1995   40.67085  -73.988304   \n",
+       "1996  40.754204   -73.94283   \n",
+       "1997   40.71411   -74.00858   \n",
+       "1998  40.691322   -73.86714   \n",
+       "1999   40.70774   -73.93985   \n",
+       "\n",
+       "                                           georeference  \\\n",
+       "0     {'type': 'Point', 'coordinates': [-73.91843, 4...   \n",
+       "1     {'type': 'Point', 'coordinates': [-73.93956, 4...   \n",
+       "2     {'type': 'Point', 'coordinates': [-73.96892, 4...   \n",
+       "3     {'type': 'Point', 'coordinates': [-73.90532, 4...   \n",
+       "4     {'type': 'Point', 'coordinates': [-73.89351, 4...   \n",
+       "...                                                 ...   \n",
+       "1995  {'type': 'Point', 'coordinates': [-73.988304, ...   \n",
+       "1996  {'type': 'Point', 'coordinates': [-73.94283, 4...   \n",
+       "1997  {'type': 'Point', 'coordinates': [-74.00858, 4...   \n",
+       "1998  {'type': 'Point', 'coordinates': [-73.86714, 4...   \n",
+       "1999  {'type': 'Point', 'coordinates': [-73.93985, 4...   \n",
+       "\n",
+       "     :@computed_region_kjdx_g34t :@computed_region_yamh_8v7k  \\\n",
+       "0                           2090                         894   \n",
+       "1                           2095                         749   \n",
+       "2                           2095                         749   \n",
+       "3                           2090                         894   \n",
+       "4                           2032                         307   \n",
+       "...                          ...                         ...   \n",
+       "1995                        2090                         894   \n",
+       "1996                        2137                         196   \n",
+       "1997                        2095                         749   \n",
+       "1998                        2137                         196   \n",
+       "1999                        2090                         894   \n",
+       "\n",
+       "     :@computed_region_wbg7_3whc  \n",
+       "0                            820  \n",
+       "1                            791  \n",
+       "2                            751  \n",
+       "3                            816  \n",
+       "4                            654  \n",
+       "...                          ...  \n",
+       "1995                         893  \n",
+       "1996                         873  \n",
+       "1997                         723  \n",
+       "1998                        1168  \n",
+       "1999                         884  \n",
+       "\n",
+       "[2000 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df.infer_objects()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2000 entries, 0 to 1999\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column                       Non-Null Count  Dtype \n",
+      "---  ------                       --------------  ----- \n",
+      " 0   transit_timestamp            2000 non-null   object\n",
+      " 1   transit_mode                 2000 non-null   object\n",
+      " 2   station_complex_id           2000 non-null   object\n",
+      " 3   station_complex              2000 non-null   object\n",
+      " 4   borough                      2000 non-null   object\n",
+      " 5   payment_method               2000 non-null   object\n",
+      " 6   fare_class_category          2000 non-null   object\n",
+      " 7   ridership                    2000 non-null   object\n",
+      " 8   transfers                    2000 non-null   object\n",
+      " 9   latitude                     2000 non-null   object\n",
+      " 10  longitude                    2000 non-null   object\n",
+      " 11  georeference                 2000 non-null   object\n",
+      " 12  :@computed_region_kjdx_g34t  1969 non-null   object\n",
+      " 13  :@computed_region_yamh_8v7k  2000 non-null   object\n",
+      " 14  :@computed_region_wbg7_3whc  1958 non-null   object\n",
+      "dtypes: object(15)\n",
+      "memory usage: 234.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "results_df.info()"
    ]
   },
   {
